--- a/Xcode/Kids Paint/Kids Paint/Info.plist
+++ b/Xcode/Kids Paint/Kids Paint/Info.plist
@@ -61,6 +61,8 @@
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 </dict>
 </plist>
